# leclog

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml  macos-runner.sh
.github/workflows/: ci.yml  release.yml
scripts/: build-windows-whisper-gpu-runtime.ps1  m1-transcript-smoke.ts  run-m1-transcript-smoke.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: README.md  ffmpeg-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  state.rs  storage.rs  system_audio.rs
src-tauri/src/commands/: mod.rs  session_commands.rs
src/components/: AppShell.tsx  AudioLevelMeter.tsx  ConfirmDialog.tsx  ControlBar.tsx  PanelList.tsx  RecordingPage.tsx  RuntimeSetupPanel.tsx  SessionArtifacts.tsx  SessionAudioReviewBar.tsx  SessionCard.tsx  SessionDetailPage.tsx  SessionExportDialog.tsx  SessionListPage.tsx  SessionStatsStrip.tsx  SettingsPage.tsx  StatusBadge.tsx  TranscriptPanel.tsx
src/hooks/: useAppSettings.ts  useLiveSessionDuration.ts  useLiveTranscript.ts  useMockTranscriptStream.ts  useProcessingSettings.ts  useRecentState.ts  useSessionAudioRecorder.ts  useSessionPolling.ts  useTranscriptionSettings.ts
src/lib/: errors.ts  format.ts  mockSegments.ts  session.ts  store.ts  tasks.ts  tauri.ts  transcriptionLanguageProfiles.ts  updater.ts
src/smoke/: M1TranscriptSmokeApp.tsx
src/types/: session.ts
