[package]
name = "leclog"
version = "0.3.2"
description = "Leclog desktop app"
authors = ["OpenAI Codex"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.0.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow"] }
screencapturekit = { version = "1.5.4", features = ["macos_15_0"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[patch.crates-io]
screencapturekit = { path = "../vendor/screencapturekit" }
